# WildVision-Bench

./: .gitignore  README.md  bench_utils.py  elo_leaderboard.md  eval_vllm.sh  format_lmmseval_answers.py  gen_answers.py  gen_answers.sh  get_judgement.py  pyproject.toml  run_vllm.py  setup.py  show_results.py  show_results.sh
config/: api_config.yaml  judge_config.yaml
data/: bootstrapping_results.jsonl  vision_bench_battles.jsonl
data/release_bench_0617/model_answers/: Qwen_Qwen-VL-Chat.jsonl  THUDM_cogvlm-chat-hf.jsonl  bczhou_tiny-llava-v1-hf.jsonl  deepseek-ai_deepseek-vl-7b-chat.jsonl  liuhaotian_llava-v1.6-vicuna-13b.jsonl  openbmb_MiniCPM-V.jsonl  yi-vl-plus.jsonl
data/release_bench_0617/model_judgements/judge_gpt-4o_reference_claude-3-sonnet-20240229/: BAAI_Bunny-v1_0-3B.jsonl  bczhou_tiny-llava-v1-hf.jsonl  claude-3-opus-20240229.jsonl  deepseek-ai_deepseek-vl-7b-chat.jsonl  gemini-pro-vision.jsonl  liuhaotian_llava-v1.5-13b.jsonl  liuhaotian_llava-v1.6-vicuna-13b.jsonl  liuhaotian_llava-v1.6-vicuna-7b.jsonl
data/vision_bench_0617/: example_model_answers.jsonl
data/vision_bench_0617/model_answers/: BAAI_Bunny-v1_0-3B.jsonl  Reka-Flash.jsonl  aria.jsonl  claude-3-haiku-20240307.jsonl  claude-3-opus-20240229.jsonl  claude-3-sonnet-20240229.jsonl  gemini-pro-vision.jsonl  gpt-4-vision-preview.jsonl  gpt-4o.jsonl  idefics2-8b-chatty.jsonl  liuhaotian_llava-v1.5-13b.jsonl  liuhaotian_llava-v1.6-34b.jsonl  liuhaotian_llava-v1.6-vicuna-7b.jsonl  llava-1.5-7b-hf.jsonl  unum-cloud_uform-gen2-qwen-500m.jsonl
data/vision_bench_0617/model_judgements/judge_gpt-4o_reference_claude-3-sonnet-20240229/: Qwen_Qwen-VL-Chat.jsonl  Reka-Flash.jsonl  THUDM_cogvlm-chat-hf.jsonl  aria.jsonl  claude-3-haiku-20240307.jsonl  claude-3-sonnet-20240229.jsonl  gpt-4-vision-preview.jsonl  gpt-4o.jsonl  idefics2-8b-chatty.jsonl  liuhaotian_llava-v1.6-34b.jsonl  llava-1.5-7b-hf.jsonl  openbmb_MiniCPM-V.jsonl  unum-cloud_uform-gen2-qwen-500m.jsonl  yi-vl-plus.jsonl
eval_scripts/: run_pixtral.py
model_configs/llava-1.5-7b-hf/: generation_config.yaml
model_configs/openbmb_MiniCPM-V/: generation_config.yml
