[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wvbench"
version = "0.2.35"
description = "WildVision-Bench"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "aiohttp", "fastapi", "httpx", "markdown2[all]", "nh3", "numpy","matplotlib",
    "prompt_toolkit>=3.0.0", "pydantic<2,>=1", "requests", "rich>=10.0.0",
    "shortuuid", "tiktoken", "uvicorn", "fire", "datasets", "tiktoken", "fire", "datasets", "reka-api", "prettytable", "plotly", "scikit-learn", "icecream",
    "accelerate>=0.21", "peft", "sentencepiece", "torch", "torchvision", "einops", "transformers>=4.31.0", "protobuf", "psutil", 'openai', 'attrdict', 'timm', 'google-generativeai', 'anthropic',
    "transformers_stream_generator", "imagehash",
    "wildvision @ git+https://github.com/WildVision-AI/WildVision-Arena",
]

[project.optional-dependencies]

[project.urls]
"Homepage" = "https://huggingface.co/spaces/WildVision/vision-arena"

[tool.setuptools.packages.find]
exclude = ["assets*"]

[tool.wheel]
exclude = ["assets*"]
